--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,9 +7,15 @@
 <h1><%= t(".container_title") %></h1>
 
 <section id='questions'>
-  <% @questions.each do |question| %>
-    <%= render question %>
-  <% end %>
+	<% if user_signed_in? %>
+		<% @questions_filter.each do |question| %>
+			<%= render question %>
+		<% end %>
+	<% else %>
+		<% @questions.each do |question| %>
+			<%= render question %>
+		<% end %>
+	<% end %>
 </section>
 
 <div class="digg_pagination">
